--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
     --cor-primaria: #000000;
     --cor-secundaria:#F6F6F6;
     --cor-terciaria:  #22D4FD;
-    --houver:  #272727;
+    --hover:  #272727;
 
     --fonte-primaria:"Krona One", sans-serif;
     --fonte-secundaria: "Montserrat", sans-serif;
@@ -18,7 +18,7 @@
 }
 
 body{
-    /* height: 100vh; */
+    
     background-color: var(--cor-primaria);
     color: var(--cor-secundaria);
     box-sizing: border-box ;
@@ -47,7 +47,7 @@ body{
 
 .apresentacao{
     
-    margin: 5% 15%;
+    padding: 5% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -105,7 +105,6 @@ body{
 
 .apresentacao__links__navegacao{
 
-    /* background-color: #22D4FD; */
     gap: 16px;
     display: flex;
     justify-content: center;
@@ -121,9 +120,9 @@ body{
     font-weight: 600;
 }
 
-.apresentacao__links__link:hover {
+.apresentacao__links__navegacao:hover {
 
-    background-color: var(--houver);
+    background-color: var(--hover);
 
 }
 
